[gd_scene load_steps=2 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Panel" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Range" type="ProgressBar" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 300.0
margin/top = 492.0
margin/right = -300.0
margin/bottom = 448.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="StepLabel" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 370.0
margin/top = 155.0
margin/right = -370.0
margin/bottom = 199.0
text = "TEST"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MaxLabel" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 370.0
margin/top = 208.0
margin/right = -370.0
margin/bottom = 252.0
text = "TEST"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MinLabel" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 370.0
margin/top = 262.0
margin/right = -370.0
margin/bottom = 306.0
text = "TEST"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ValueLabel" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 370.0
margin/top = 304.0
margin/right = -370.0
margin/bottom = 348.0
text = "TEST"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="HBoxContainer" parent="."]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 229.0
margin/right = 10.0
margin/bottom = 197.0
alignment = 0

[node name="HButtonArray" type="HButtonArray" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 321.0
margin/bottom = 32.0
button/count = 4
button/min_button_size = 0.0
button/align = 4
button/0/text = "Set Step"
button/0/icon = null
button/1/text = "Set Max"
button/1/icon = null
button/2/text = "Set Min"
button/2/icon = null
button/3/text = "Set Value"
button/3/icon = null
button/selected = 0

[node name="TextEdit" type="LineEdit" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 330.0
margin/top = 0.0
margin/right = 1004.0
margin/bottom = 32.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[connection signal="changed" from="Range" to="." method="_on_Range_changed"]

[connection signal="value_changed" from="Range" to="." method="_on_Range_value_changed"]

[connection signal="button_selected" from="HBoxContainer/HButtonArray" to="." method="_on_HButtonArray_button_selected"]


